syntax = "proto3";

package product;

option go_package = "product";

message Product{
    string id = 1;
    string name = 2;
    double price = 3;
}

message CreateProductRequest{
    Product product = 1;
}

message CreateProductResponse{
    Product product = 1;
}

service ProductService{
    //CRUD
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse){};
}